# docman-homework-judge-action

./: .pre-commit-config.yaml  action.yml  pyproject.toml
docman_judge/: cases.py  correct.py  judge.py  log.py  main.py
docman_judge/data/citations/: 1.txt
docman_judge/data/inputs/: 1.txt
expect_outputs/: 1.txt
src/: cases.py  correct.py  judge.py  log.py  main.py
