[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docman_judge"
version = "0.1.0"
description = "A judge program for Docman homework"
authors = [
    { name = "Extra-Creativity" },
    { name = "Zhuofeng Wang", email = "zhuofengwang2003@gmail.com" },
]
requires-python = ">=3.10"
dependencies = ["requests", "termcolor"]

[project.scripts]
docman-judge = "docman_judge.main:main"

[tool.hatch.build]
artifacts = ["python/data/"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["B023"]
